--- a/sample.html
+++ b/sample.html
@@ -42,8 +42,8 @@
 				</ul>
 			</div>
 		</div>		
-		<script src="content/scripts/jquery/jquery-1.9.1.js"></script>
-		<script src="content/scripts/lightbox/js/jquery.lightbox-0.5.js"></script>
+		<script src="content/scripts/lightbox/js/jquery.js"></script>
+		<script src="content/scripts/lightbox/js/jquery.lightbox-1.0.0.min.js"></script>
 		<script>
 			$(function(){$('.js_lb').lightBox();});
 		</script>
